Fix spacing on tcr link and give gamasot-link a hover

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,10 @@ h1 {
     color: darkgoldenrod;
 }
 
+.gamasot-link:hover {
+    color: red;
+}
+
 .profile-container {
     align-items: center;
     display: var(--flexbox);
